--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.8",
     "@tremor/react": "^3.7.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
